[gd_scene load_steps=11 format=2]

[ext_resource path="res://caster.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/86c303dd8cc9f1cf.png" type="Texture" id=3]
[ext_resource path="res://player/XPBAR.png" type="Texture" id=4]
[ext_resource path="res://player/power_awd.gd" type="Script" id=5]
[ext_resource path="res://player/3rd_power.gd" type="Script" id=6]
[ext_resource path="res://player/1st_power.gd" type="Script" id=7]
[ext_resource path="res://player/2nd_power.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0

[sub_resource type="CircleShape2D" id=2]
radius = 75.0267

[node name="player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="on_death" type="Node2D" parent="."]
visible = false
position = Vector2( -2, -138 )
scale = Vector2( 3, 3 )

[node name="respawn" type="Button" parent="on_death"]
margin_left = -64.3333
margin_top = 2.33333
margin_right = 64.6667
margin_bottom = 22.3333
text = "restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="on_death"]
margin_left = -27.0
margin_top = -17.6667
margin_right = 27.0
margin_bottom = -3.66667
text = "You lose"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area_expirience" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_expirience"]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="scoup" type="Label" parent="."]
margin_left = 274.0
margin_top = -569.0
margin_right = 314.0
margin_bottom = -555.0
rect_scale = Vector2( 3, 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpBar" type="TextureProgress" parent="."]
margin_left = 366.0
margin_top = -587.0
margin_right = 1016.0
margin_bottom = -516.0
max_value = 1000.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
texture_progress_offset = Vector2( 37, 8 )

[node name="power_awd" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="1st_power" type="Node2D" parent="power_awd"]
position = Vector2( -423, 0 )
script = ExtResource( 7 )

[node name="1st_power_select" type="Button" parent="power_awd/1st_power"]
margin_left = -64.3333
margin_top = 2.33333
margin_right = 64.6667
margin_bottom = 22.3333
text = "select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2nd_power" type="Node2D" parent="power_awd"]
script = ExtResource( 8 )

[node name="2nd_power_select" type="Button" parent="power_awd/2nd_power"]
margin_left = -64.3333
margin_top = 2.33333
margin_right = 64.6667
margin_bottom = 22.3333
text = "select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3rd_power" type="Node2D" parent="power_awd"]
position = Vector2( 398, 0 )
script = ExtResource( 6 )

[node name="3rd_power_select" type="Button" parent="power_awd/3rd_power"]
margin_left = -64.3333
margin_top = 2.33333
margin_right = 64.6667
margin_bottom = 22.3333
text = "select"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="on_death/respawn" to="." method="_on_respawn_pressed"]
[connection signal="body_entered" from="Area_expirience" to="." method="expirience_Area_body_entered"]
[connection signal="value_changed" from="ExpBar" to="." method="_on_ExpBar_value_changed"]
[connection signal="pressed" from="power_awd/1st_power/1st_power_select" to="." method="_on_1st_power_select_pressed"]
[connection signal="pressed" from="power_awd/2nd_power/2nd_power_select" to="." method="_on_2nd_power_select_pressed"]
[connection signal="pressed" from="power_awd/3rd_power/3rd_power_select" to="." method="_on_3rd_power_select_pressed"]
